welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:1: error: ':' expected but ')' found.
def inter(Color){
               ^FlowerCase:5: error: identifier expected but '}' found.
}
^